kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
spec:
  rules:
    - host: portfolio.khawlabenkadida.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: portfolio-service
                port:
                  number: 80
